now able to download mp4 video with python

--- a/read_dataset.ipynb
+++ b/read_dataset.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,18 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "urls = list()\n",
     "for x in waterfall_data[\"relpaths\"]:\n",
     "    u =\"https://openaipublic.blob.core.windows.net/minecraft-rl/\" + x\n",
-    "    print(u)"
+    "    urls.append(u)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "<bound method Path.exists of PosixPath('/home/ramiismael/Downloads/cheeky-cornflower-setter-00df0a566647-20220717-135630.mp4')>\n"
      ]
     }
    ],
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -180,6 +182,32 @@
     "        idx += 1\n",
     "print(idx)\n",
     "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://openaipublic.blob.core.windows.net/minecraft-rl/data/waterfall/cheeky-cornflower-setter-00df0a566647-20220717-135630.mp4\n",
+      "https://openaipublic.blob.core.windows.net/minecraft-rl/data/waterfall/cheeky-cornflower-setter-013d0ba949b2-20220717-125525.mp4\n",
+      "https://openaipublic.blob.core.windows.net/minecraft-rl/data/waterfall/cheeky-cornflower-setter-01b256a7cfb9-20220717-131452.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "#urllib.request.urlretrieve(url_link, 'video_name.mp4') \n",
+    "for idx , x in enumerate( urls[:3]):\n",
+    "    print(x)\n",
+    "    print\n",
+    "    resp = requests.get(x)\n",
+    "    with open(f\"{idx}.mp4\", \"wb\") as f:\n",
+    "        f.write(resp.content)"
    ]
   }
  ],
